# ritalin-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: handoff.md
.github/workflows/: ci.yml  release.yml
bench/: RESULTS.md  binary-stats.md  full-workflow.json  full-workflow.md  gate-hookmode.json  gate-hookmode.md  gate-noop.json  gate-noop.md  gate-scaling-10.json  gate-scaling-10.md  gate-scaling-100.json  gate-scaling-100.md  gate-scaling-1000.json  gate-scaling-1000.md  python_gate.py  run_benchmarks.sh  rust-vs-python.json  rust-vs-python.md
bench/arc-agi-3/: FINDINGS.md  play.py  requirements.txt
bench/arc-agi-3/results/baseline/: vc33-log.md  vc33-score.json  vc33-strategy.py
bench/arc-agi-3/results/ritalin/: vc33-exploration.md  vc33-log.md  vc33-score.json  vc33-strategy.py
docs/superpowers/specs/: 2026-04-11-benchmarks-tests-design.md
research/: FINAL-REPORT.md  agent-findings-anthropic.md  agent-findings-community.md  agent-findings-enforcement.md  agent-findings-psychology.md  codex-review.md  gemini-review.md  gpt-pro-pack.md  gpt-pro-v0.1.1-review.md  karpathy-steinberger-quotes.md  macro-trend-pr-prompt-request.md  synthesis.md
src/: cli.rs  error.rs  gate_eval.rs  main.rs  output.rs
src/commands/: add.rs  agent_info.rs  export_contract.rs  gate.rs  init.rs  mod.rs  prove.rs  seed.rs  skill.rs  status.rs  update.rs
src/ledger/: evidence.rs  marker.rs  mod.rs  obligations.rs  scope.rs  workspace_hash.rs
src/skill/: SKILL.md
tests/: attacks.rs  cli_integration.rs  gate_props.rs  seed_test.rs
