[package]
name = "ritalin"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Proof-carrying completion for AI coding agents. The verification layer for the prompt-request era."
license = "MIT"
repository = "https://github.com/199-biotechnologies/ritalin"
homepage = "https://github.com/199-biotechnologies/ritalin"
documentation = "https://github.com/199-biotechnologies/ritalin"
readme = "README.md"
keywords = ["ai", "agent", "claude", "cli", "completion"]
categories = ["command-line-utilities", "development-tools"]
authors = ["199 Biotechnologies"]

[[bin]]
name = "ritalin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
comfy-table = "7"
owo-colors = "4"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
directories = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
