[package]
name = "ritalin"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Executive function for AI coding agents. Focus their intelligence, ground their work, stop the avoidable mistakes."
license = "MIT"
repository = "https://github.com/paperfoot/ritalin-cli"
homepage = "https://github.com/paperfoot/ritalin-cli"
documentation = "https://github.com/paperfoot/ritalin-cli"
readme = "README.md"
keywords = ["ai", "agent", "claude", "cli", "verification"]
categories = ["command-line-utilities", "development-tools"]
authors = ["199 Biotechnologies"]
exclude = ["bench/arc-agi-3/", "environment_files/", "notebooklm-assets/", ".claude/"]

[[bin]]
name = "ritalin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
comfy-table = "7"
owo-colors = "4"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
directories = "6"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
